# coin_master

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  cli.py  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  default.yml
app/: main.py
app/application/commands/companies/: create_company.py  delete_company.py  update_company.py
app/application/commands/email_templates/: create_email_template.py  delete_email_template.py  update_email_template.py
app/application/commands/items/: create_item.py  delete_item.py  update_item.py
app/application/commands/receipts/: create_receipt.py  delete_receipt.py  update_receipt.py
app/application/commands/tags/: create_tag.py  delete_tag.py  update_tag.py
app/application/commands/tokens/: create_token.py  delete_token.py  revoke_token.py
app/application/commands/users/: change_password.py  change_password_with_token.py  create_reset_password_token.py  create_user.py  update_user.py
app/application/services/: pagination.py  send_email.py
app/domain/: exceptions.py  validators.py
app/domain/common/: base.py  event_bus.py  repository.py
app/domain/companies/: company.py  company_factory.py  company_repository.py  company_schemas.py
app/domain/email_templates/: email.py  email_factory.py  email_repository.py  email_schemas.py
app/domain/items/: item.py  item_factory.py  item_repository.py  item_schemas.py
app/domain/receipt_tags/: receipt_tag.py
app/domain/receipts/: receipt.py  receipt_factory.py  receipt_repository.py  receipt_schemas.py
app/domain/tags/: tag.py  tag_factory.py  tag_repository.py  tag_schemas.py
app/domain/tokens/: token.py  token_repository.py  token_schemas.py
app/domain/users/: auth_user.py  email_token.py  email_token_repository.py  user.py  user_channel.py  user_exceptions.py  user_factory.py  user_repository.py  user_schemas.py
app/infrastructure/: app.py  auth.py  conf.py  database.py  logger.py  router.py
app/infrastructure/decorators/: __init__.py  handle_exceptions.py  requires_auth.py  utils.py
app/infrastructure/di/: __init__.py  app_container.py  utils.py
app/infrastructure/image_processing/: thumbnail_generator.py
app/infrastructure/repositories/: base_sqlalchemy_repository.py  company_repository.py  email_template_repository.py  email_token_repository.py  item_repository.py  receipt_repository.py  tag_repository.py  token_repository.py  user_repository.py
app/infrastructure/services/: send_email.py
app/infrastructure/sqlalchemy/: functions.py  types.py
app/infrastructure/storage/: base.py  fake_s3.py  s3.py
app/presentation/cli/: change_password.py  create_superuser.py
app/presentation/endpoints/: companies.py  email_templates.py  items.py  receipts.py  tags.py  tokens.py  users.py
deployment/: Dockerfile  Dockerfile.production  entrypoint.sh  gunicorn.conf.py
deployment/helm/: Chart.yaml  values.yaml
deployment/helm/templates/: coin-master-certificate.yml  coin-master-deployment.yml  coin-master-ingress.yml  coin-master-service.yml
migrations/: env.py
migrations/versions/: 2024_11_11_1950-6108a7ef6ba5_migration.py  2024_11_11_2138-471394ac51fb_migration.py  2024_11_12_2328-d3f7cf56ccbe_migration.py  2024_11_13_2211-bd0fbab57aa4_migration.py  2024_11_14_2318-beee757bd015_migration.py  2024_11_16_2148-de8a2ee704fb_migration.py  2024_11_18_2352-1a1fcd77457a_migration.py  2024_11_24_1720-78762af014dc_migration.py  2024_11_24_2005-81d65960b2ce_migration.py  2024_11_25_2033-766c435c74f1_migration.py  2024_11_25_2104-1382220b9dd9_migration.py  2024_12_04_2119-76c2af403d73_migration.py
scripts/: install_hosts.sh  install_mkcerts.sh
scripts/nginx/: nginx.conf
scripts/nginx/common/: _proxy.conf  _ssl.conf
scripts/nginx/sites-enabled/: api.cm.local.conf  cm.local.conf  img.cm.local.conf  mailhog.cm.local.conf  minio.cm.local.conf
share/: init.sql
tests/: conftest.py
(+17 files in other folders)
